# python-advent-2024

./: .gitignore  pyproject.toml
src/advent/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day1.py  solution.py  solve.py
tests/: test_solutions.py
