[project]
name = "advent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "ipython>=8.31.0",
    "numpy>=2.2.1",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
]

[tool.ruff]
line-length = 140
indent-width = 4

[tool.ruff.lint]
ignore = ["E741"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
